force-app/main/default/objects/service1__c/service1__c.object-meta.xml
<CustomObject>
    <label>service1</label>
    <nameField>
        <displayFormat>S-{000}</displayFormat>
        <label>services id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>servoces1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>