force-app/main/default/objects/service1__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <label>description</label>
    <type>TextArea</type>
</CustomField>