force-app/main/default/objects/service1__c/fields/helpline_number__c.field-meta.xml
<CustomField>
    <fullName>helpline_number__c</fullName>
    <label>helpline number</label>
    <type>Phone</type>
</CustomField>