force-app/main/default/objects/service1__c/fields/service_name__c.field-meta.xml
<CustomField>
    <fullName>service_name__c</fullName>
    <label>service name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>